Sketch: Fix issues with widget block centre alignment.

--- a/sketch/css/editor-blocks.css
+++ b/sketch/css/editor-blocks.css
@@ -536,11 +536,11 @@ p.has-drop-cap:not(:focus)::first-letter {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
-[data-align="center"] .wp-block-categories ul,
-[data-align="center"] .wp-block-latest-posts ul,
-[data-align="center"] .wp-block-archives ul {
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
 }
 
